--- a/guitar/tortex-time/index.html
+++ b/guitar/tortex-time/index.html
@@ -30,7 +30,7 @@
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:site" content="@tiborsimonio" />
-      <meta name="twitter:title" content="tiborsimon.io - Engineering with Passion" />
+      <meta name="twitter:title" content="Tibor Simon - Engineering with Passion" />
       <meta name="twitter:description" content="A blog and portfolio about programming, engineering, electronics and music. Tibor, the host, is a graduated electrical engineer from Budapest." />
       <meta name="twitter:image" content="https://tiborsimon.io/images/tibor4.jpg" />
 
