--- a/dsp/generating-sinusoid-signals/index.html
+++ b/dsp/generating-sinusoid-signals/index.html
@@ -17,12 +17,12 @@
   <meta name="keywords" content="" />
   <meta name="description" content="Generating sinusoid signals is often the first step for executing a more complex computation. It should be a routine, but actually it isn&#39;t. Many people struggles with it." />
 
-  <meta property="fb:app_id" content="551628881652865"/>
+  <meta property="fb:app_id" content="551628881652865" />
   <meta property="og:site_name" content="tiborsimon.io" />
   <meta property="og:type" content="article"/>
-  <meta property="og:title" content="Generating sinusoid signals"/>
-  <meta property="og:url" content="https://tiborsimon.io/dsp/generating-sinusoid-signals/"/>
-  <meta property="og:description" content="Generating sinusoid signals is often the first step for executing a more complex computation. It should be a routine, but actually it isn&#39;t. Many people struggles with it."/>
+  <meta property="og:title" content="Generating sinusoid signals" />
+  <meta property="og:url" content="https://tiborsimon.io/dsp/generating-sinusoid-signals/" />
+  <meta property="og:description" content="Generating sinusoid signals is often the first step for executing a more complex computation. It should be a routine, but actually it isn&#39;t. Many people struggles with it." />
   <meta property="article:published_time" content="2015-10-17" />
   <meta property="article:section" content="dsp" />
   <meta property="article:tag" content="" />
@@ -33,14 +33,11 @@
   <meta name="twitter:title" content="Generating sinusoid signals" />
   <meta name="twitter:description" content="Generating sinusoid signals is often the first step for ....." />
 
-<script type="text/javascript" async
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_CHTML"></script>
-</head>
+    <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_CHTML"></script>
   </head>
 
   <body class="right-sidebar">
     <div id="page-wrapper">
-
 <!-- Header -->
 <div id="header-wrapper" class="wrapper">
   <div id="header">
@@ -321,23 +318,23 @@ s = sin(2*pi*3*t);
             </article>
 
 
-            <div class="article-sharing">
+          </div>
+
+          <div class="article-sharing">
 
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
 
-
-          <li class="rrssb-facebook">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://tiborsimon.io/dsp/generating-sinusoid-signals/" class="popup">
-              <span class="rrssb-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"><path d="M26.4 0H2.6C1.714 0 0 1.715 0 2.6v23.8c0 .884 1.715 2.6 2.6 2.6h12.393V17.988h-3.996v-3.98h3.997v-3.062c0-3.746 2.835-5.97 6.177-5.97 1.6 0 2.444.173 2.845.226v3.792H21.18c-1.817 0-2.156.9-2.156 2.168v2.847h5.045l-.66 3.978h-4.386V29H26.4c.884 0 2.6-1.716 2.6-2.6V2.6c0-.885-1.716-2.6-2.6-2.6z"/></svg>
-              </span>
-              <span class="rrssb-text">facebook</span>
-            </a>
-          </li>
+        <li class="rrssb-facebook">
+          <a href="https://www.facebook.com/sharer/sharer.php?u=https://tiborsimon.io/dsp/generating-sinusoid-signals/" class="popup">
+            <span class="rrssb-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"><path d="M26.4 0H2.6C1.714 0 0 1.715 0 2.6v23.8c0 .884 1.715 2.6 2.6 2.6h12.393V17.988h-3.996v-3.98h3.997v-3.062c0-3.746 2.835-5.97 6.177-5.97 1.6 0 2.444.173 2.845.226v3.792H21.18c-1.817 0-2.156.9-2.156 2.168v2.847h5.045l-.66 3.978h-4.386V29H26.4c.884 0 2.6-1.716 2.6-2.6V2.6c0-.885-1.716-2.6-2.6-2.6z"/></svg>
+            </span>
+            <span class="rrssb-text">facebook</span>
+          </a>
+        </li>
 
           <li class="rrssb-twitter">
-            <!-- Replace href with your Meta and URL information  -->
             <a href="https://twitter.com/intent/tweet?text=Generating sinusoid signals - Generating sinusoid signals is often the first step for ... https://tiborsimon.io/dsp/generating-sinusoid-signals/ @tiborsimonio"
             class="popup">
               <span class="rrssb-icon">
@@ -347,9 +344,7 @@ s = sin(2*pi*3*t);
             </a>
           </li>
 
-
           <li class="rrssb-linkedin">
-            <!-- Replace href with your meta and URL information -->
             <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://tiborsimon.io/dsp/generating-sinusoid-signals/&amp;title=Generating%20sinusoid%20signals&amp;summary=Generating%20sinusoid%20signals%20is%20often%20the%20first%20step%20for%20executing%20a%20more%20complex%20computation.%20It%20should%20be%20a%20routine%2C%20but%20actually%20it%20isn%27t.%20Many%20people%20struggles%20with%20it." class="popup">
               <span class="rrssb-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28"><path d="M25.424 15.887v8.447h-4.896v-7.882c0-1.98-.71-3.33-2.48-3.33-1.354 0-2.158.91-2.514 1.802-.13.315-.162.753-.162 1.194v8.216h-4.9s.067-13.35 0-14.73h4.9v2.087c-.01.017-.023.033-.033.05h.032v-.05c.65-1.002 1.812-2.435 4.414-2.435 3.222 0 5.638 2.106 5.638 6.632zM5.348 2.5c-1.676 0-2.772 1.093-2.772 2.54 0 1.42 1.066 2.538 2.717 2.546h.032c1.71 0 2.77-1.132 2.77-2.546C8.056 3.593 7.02 2.5 5.344 2.5h.005zm-2.48 21.834h4.896V9.604H2.867v14.73z"/></svg>
@@ -386,11 +381,11 @@ s = sin(2*pi*3*t);
          </li>
 
     </ul>
-<!-- Buttons end here -->            </div>
+<!-- Buttons end here -->          </div>
 
-            <div class="comments" id="discussion">
-              <h1>Comments</h1>
-              <hr />
+          <div class="comments" id="discussion">
+            <h1>Comments</h1>
+            <hr />
 <div id="disqus_thread"></div>
 <script>
 
@@ -408,8 +403,7 @@ s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>            </div>
-          </div>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>          </div>
 
       </div>
 
@@ -425,18 +419,16 @@ s.setAttribute('data-timestamp', +new Date());
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
 
-
-          <li class="rrssb-facebook">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://tiborsimon.io/dsp/generating-sinusoid-signals/" class="popup">
-              <span class="rrssb-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"><path d="M26.4 0H2.6C1.714 0 0 1.715 0 2.6v23.8c0 .884 1.715 2.6 2.6 2.6h12.393V17.988h-3.996v-3.98h3.997v-3.062c0-3.746 2.835-5.97 6.177-5.97 1.6 0 2.444.173 2.845.226v3.792H21.18c-1.817 0-2.156.9-2.156 2.168v2.847h5.045l-.66 3.978h-4.386V29H26.4c.884 0 2.6-1.716 2.6-2.6V2.6c0-.885-1.716-2.6-2.6-2.6z"/></svg>
-              </span>
-              <span class="rrssb-text">facebook</span>
-            </a>
-          </li>
+        <li class="rrssb-facebook">
+          <a href="https://www.facebook.com/sharer/sharer.php?u=https://tiborsimon.io/dsp/generating-sinusoid-signals/" class="popup">
+            <span class="rrssb-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"><path d="M26.4 0H2.6C1.714 0 0 1.715 0 2.6v23.8c0 .884 1.715 2.6 2.6 2.6h12.393V17.988h-3.996v-3.98h3.997v-3.062c0-3.746 2.835-5.97 6.177-5.97 1.6 0 2.444.173 2.845.226v3.792H21.18c-1.817 0-2.156.9-2.156 2.168v2.847h5.045l-.66 3.978h-4.386V29H26.4c.884 0 2.6-1.716 2.6-2.6V2.6c0-.885-1.716-2.6-2.6-2.6z"/></svg>
+            </span>
+            <span class="rrssb-text">facebook</span>
+          </a>
+        </li>
 
           <li class="rrssb-twitter">
-            <!-- Replace href with your Meta and URL information  -->
             <a href="https://twitter.com/intent/tweet?text=Generating sinusoid signals - Generating sinusoid signals is often the first step for ... https://tiborsimon.io/dsp/generating-sinusoid-signals/ @tiborsimonio"
             class="popup">
               <span class="rrssb-icon">
@@ -446,9 +438,7 @@ s.setAttribute('data-timestamp', +new Date());
             </a>
           </li>
 
-
           <li class="rrssb-linkedin">
-            <!-- Replace href with your meta and URL information -->
             <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://tiborsimon.io/dsp/generating-sinusoid-signals/&amp;title=Generating%20sinusoid%20signals&amp;summary=Generating%20sinusoid%20signals%20is%20often%20the%20first%20step%20for%20executing%20a%20more%20complex%20computation.%20It%20should%20be%20a%20routine%2C%20but%20actually%20it%20isn%27t.%20Many%20people%20struggles%20with%20it." class="popup">
               <span class="rrssb-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28"><path d="M25.424 15.887v8.447h-4.896v-7.882c0-1.98-.71-3.33-2.48-3.33-1.354 0-2.158.91-2.514 1.802-.13.315-.162.753-.162 1.194v8.216h-4.9s.067-13.35 0-14.73h4.9v2.087c-.01.017-.023.033-.033.05h.032v-.05c.65-1.002 1.812-2.435 4.414-2.435 3.222 0 5.638 2.106 5.638 6.632zM5.348 2.5c-1.676 0-2.772 1.093-2.772 2.54 0 1.42 1.066 2.538 2.717 2.546h.032c1.71 0 2.77-1.132 2.77-2.546C8.056 3.593 7.02 2.5 5.344 2.5h.005zm-2.48 21.834h4.896V9.604H2.867v14.73z"/></svg>
@@ -696,18 +686,16 @@ s.setAttribute('data-timestamp', +new Date());
     <!-- Buttons start here. Copy this ul to your document. -->
     <ul class="rrssb-buttons clearfix">
 
-
-          <li class="rrssb-facebook">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://tiborsimon.io/dsp/generating-sinusoid-signals/" class="popup">
-              <span class="rrssb-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"><path d="M26.4 0H2.6C1.714 0 0 1.715 0 2.6v23.8c0 .884 1.715 2.6 2.6 2.6h12.393V17.988h-3.996v-3.98h3.997v-3.062c0-3.746 2.835-5.97 6.177-5.97 1.6 0 2.444.173 2.845.226v3.792H21.18c-1.817 0-2.156.9-2.156 2.168v2.847h5.045l-.66 3.978h-4.386V29H26.4c.884 0 2.6-1.716 2.6-2.6V2.6c0-.885-1.716-2.6-2.6-2.6z"/></svg>
-              </span>
-              <span class="rrssb-text">facebook</span>
-            </a>
-          </li>
+        <li class="rrssb-facebook">
+          <a href="https://www.facebook.com/sharer/sharer.php?u=https://tiborsimon.io/dsp/generating-sinusoid-signals/" class="popup">
+            <span class="rrssb-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"><path d="M26.4 0H2.6C1.714 0 0 1.715 0 2.6v23.8c0 .884 1.715 2.6 2.6 2.6h12.393V17.988h-3.996v-3.98h3.997v-3.062c0-3.746 2.835-5.97 6.177-5.97 1.6 0 2.444.173 2.845.226v3.792H21.18c-1.817 0-2.156.9-2.156 2.168v2.847h5.045l-.66 3.978h-4.386V29H26.4c.884 0 2.6-1.716 2.6-2.6V2.6c0-.885-1.716-2.6-2.6-2.6z"/></svg>
+            </span>
+            <span class="rrssb-text">facebook</span>
+          </a>
+        </li>
 
           <li class="rrssb-twitter">
-            <!-- Replace href with your Meta and URL information  -->
             <a href="https://twitter.com/intent/tweet?text=Generating sinusoid signals - Generating sinusoid signals is often the first step for ... https://tiborsimon.io/dsp/generating-sinusoid-signals/ @tiborsimonio"
             class="popup">
               <span class="rrssb-icon">
@@ -717,9 +705,7 @@ s.setAttribute('data-timestamp', +new Date());
             </a>
           </li>
 
-
           <li class="rrssb-linkedin">
-            <!-- Replace href with your meta and URL information -->
             <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://tiborsimon.io/dsp/generating-sinusoid-signals/&amp;title=Generating%20sinusoid%20signals&amp;summary=Generating%20sinusoid%20signals%20is%20often%20the%20first%20step%20for%20executing%20a%20more%20complex%20computation.%20It%20should%20be%20a%20routine%2C%20but%20actually%20it%20isn%27t.%20Many%20people%20struggles%20with%20it." class="popup">
               <span class="rrssb-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28"><path d="M25.424 15.887v8.447h-4.896v-7.882c0-1.98-.71-3.33-2.48-3.33-1.354 0-2.158.91-2.514 1.802-.13.315-.162.753-.162 1.194v8.216h-4.9s.067-13.35 0-14.73h4.9v2.087c-.01.017-.023.033-.033.05h.032v-.05c.65-1.002 1.812-2.435 4.414-2.435 3.222 0 5.638 2.106 5.638 6.632zM5.348 2.5c-1.676 0-2.772 1.093-2.772 2.54 0 1.42 1.066 2.538 2.717 2.546h.032c1.71 0 2.77-1.132 2.77-2.546C8.056 3.593 7.02 2.5 5.344 2.5h.005zm-2.48 21.834h4.896V9.604H2.867v14.73z"/></svg>
