--- a/dsp/generating-sinusoid-signals/index.html
+++ b/dsp/generating-sinusoid-signals/index.html
@@ -33,7 +33,7 @@
   <meta name="twitter:title" content="Generating sinusoid signals" />
   <meta name="twitter:description" content="Generating sinusoid signals is often the first step for ....." />
 
-    <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_CHTML"></script>
+    <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML"></script>
   </head>
 
   <body class="right-sidebar">
@@ -101,7 +101,7 @@
               <h2>The problem</h2>
 <p>The equation of a sinusoid signal is a known fact:</p>
 <p class="equation">
-  `y(t) = A sin(2 pi f t + varphi) = A sin(omega t + varphi).`
+  $$y(t) = A \sin(2 \pi f t + \varphi) = A \sin(\omega t + \varphi).$$
 </p>
 
 <p>However. This equation is only valid in the <strong>continuous time</strong> domain, therefore without any modification it is useless in the <strong>discrete time</strong> domain used by every digital machine. You won't be able to create a continuous variable that spans through the duration of the signal from the beginning to the end while taking up every possible value.</p>
@@ -639,7 +639,7 @@ s.setAttribute('data-timestamp', +new Date());
       <li><a href="https://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (2)</li>
       <li><a href="https://tiborsimon.io/category/python.html" title="Architecture Category Posts">python</a> (4)</li>
       <li><a href="https://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (1)</li>
-      <li><a href="https://tiborsimon.io/category/web.html" title="Architecture Category Posts">web</a> (2)</li>
+      <li><a href="https://tiborsimon.io/category/web.html" title="Architecture Category Posts">web</a> (3)</li>
   </ul>
 </aside>
 <!-- .widget_categories -->      </div>
@@ -750,7 +750,7 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-07 18:41
+  Last build: 2016-03-08 18:56
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
