--- a/python/mandatory-arbitrary-order/index.html
+++ b/python/mandatory-arbitrary-order/index.html
@@ -550,11 +550,11 @@ s.setAttribute('data-timestamp', +new Date());
     </ul>
   </div>
 <div class="site-info">
-  Last build: 2016-03-08 18:56
+  Last build: 2016-03-08 23:24
 </div></div>    </div>
     <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8"></script>
 
-  <script type="text/javascript" src="http://tiborsimon.disqus.com/count.js" id="dsq-count-scr"></script>
+  <script type="text/javascript" src="https://tiborsimon.disqus.com/count.js" id="dsq-count-scr"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
