--- a/projects/matlab-library-system/index.html
+++ b/projects/matlab-library-system/index.html
@@ -8,19 +8,17 @@
   <link rel="shortcut icon" href="https://tiborsimon.io/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-  <nav class="flexwrap">
-    <div class="navmenu-wrapper card padded">
-      <div class="fade-loader"></div>
-      <div class="fade-in">
-        <div class="navmenu">
-          <a class="logo" href="https://tiborsimon.io">
-            Tibor's Lab 
-          </a>
-          <div class="group">
-            <a href="https://tiborsimon.io#articles">Articles</a>
-            <a href="https://tiborsimon.io#projects">Projects</a>
-            <a href="https://tiborsimon.io#about">About</a>
-          </div>
+  <nav class="navmenu-wrapper">
+    <div class="fade-loader"></div>
+    <div class="fade-in">
+      <div class="navmenu">
+        <a class="logo" href="https://tiborsimon.io">
+          Tibor's Lab 
+        </a>
+        <div class="group">
+          <a href="https://tiborsimon.io#articles">Articles</a>
+          <a href="https://tiborsimon.io#projects">Projects</a>
+          <a href="https://tiborsimon.io#about">About</a>
         </div>
       </div>
     </div>
@@ -34,7 +32,6 @@
             <div class="banner"></div>
             <div class="article-title">MATLAB Library System</div>
             <div class="details">
-              <div class="timestamp">2015. 11. 03.</div>
               <div class="tag-list">
                 <a href=""></a>
                 <a href=""></a>
@@ -73,6 +70,7 @@
                 <a href=""></a>
                 <a href=""></a>
               </div>
+              <div class="timestamp">2015. 11. 03.</div>
             </div>
           </div>
         </header>
