--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="fade-in">
       <div class="navmenu">
         <a class="logo" href="https://tiborsimon.io">
-          Tibor's Lab 
+          Tibor's Lab
         </a>
         <div class="group">
           <a href="https://tiborsimon.io#articles">Articles</a>
@@ -38,7 +38,7 @@
         <div class="fade-in about">
           <div class="text">
             <div class="my-name">My name is <strong>Tibor Simon.</strong></div>
-            I am a graduated <strong>electrical engineer</strong> with a master's degree. As an engineer I constantly pushing myself to be better at what I am doing. I like to <strong>discover</strong> new technologies, <strong>experiment</strong> with ideas. I am a <strong>Vimmer</strong>, I use <strong>Linux</strong>, I am a late night <strong>owl</strong>, and I prefer the <strong>command line</strong> over the mouse. Yes, I felt into the <strong>unproductive hole of tools</strong> a few times, yes I have a huge pile of <strong>unfinished projects</strong> and yes this is the (n+1)th iteration of my webpage. But hey, that doens't matter as far as <strong>I enjoy it</strong>. Oh, and I like to play the <strong>guitar</strong> and I also like to take <strong>pictures</strong>. Hope you find someting useful here.
+            I am a graduated <strong>electrical engineer</strong> with a master's degree. As an engineer I constantly pushing myself to be better at what I am doing. I like to <strong>discover</strong> new technologies, <strong>experiment</strong> with ideas. I am a <strong>Vimmer</strong>, I use <strong>Linux</strong>, I am a late night <strong>owl</strong>, and I prefer the <strong>command line</strong> over the mouse. Yes, I felt into the <strong>unproductive hole of tools</strong> a few times, yes I have a huge pile of <strong>unfinished projects</strong> and yes this is the (n+1)th iteration of my webpage. But hey, that doens't matter as far as <strong>I enjoy it</strong>. Oh, and I like to play the <strong>guitar</strong> and I also like to take <strong>pictures</strong>. Hope you find someting useful here. This is a modification..
           </div>
         </div>
       </section>
